Finalização Swagger
