# src/API/Swagger/swaggerDocs.json
@@ -48,6 +48,12 @@
         "description": "Retorna todos os empréstimos cadastrados na aplicação",
         "parameters": [],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaObterEmprestimos"
+            }
+          },
           "204": {
             "description": "No Content"
           }
@@ -71,6 +77,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaSolicitacaoEmprestimo"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -96,6 +108,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaObterEmprestimo"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -121,6 +139,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaObterEmprestimos"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -155,6 +179,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaAprovacaoEmprestimo"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -173,6 +203,12 @@
         "description": "Obtém todas as parcelas cadastradas na aplicação",
         "parameters": [],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaObterParcelas"
+            }
+          },
           "204": {
             "description": "No Content"
           }
@@ -195,6 +231,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaObterParcela"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -220,6 +262,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaObterParcelas"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -245,6 +293,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaRegistroPagamentoParcela"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -263,6 +317,12 @@
         "description": "Retorna todos os usuários cadastrados na aplicação",
         "parameters": [],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaObterUsuarios"
+            }
+          },
           "204": {
             "description": "No Content"
           }
@@ -286,6 +346,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaAdicionarUsuario"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -311,6 +377,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaObterUsuarioId"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -334,6 +406,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaRemoverUsuario"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -362,6 +440,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaUsuarioLogin"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -396,6 +480,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaUsuarioAtualizarSenha"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -421,6 +511,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/RespostaHabilitarUsuario"
+            }
+          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -511,6 +607,495 @@
         "erro": {
           "type": "string",
           "example": ""
+        }
+      }
+    },
+    "RespostaObterUsuarios": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "example": ""
+              },
+              "Email": {
+                "type": "string",
+                "example": ""
+              },
+              "Nome": {
+                "type": "string",
+                "example": ""
+              },
+              "Cpf": {
+                "type": "string",
+                "example": ""
+              },
+              "Senha": {
+                "type": "string",
+                "example": ""
+              },
+              "Habilitado": {
+                "type": "boolean",
+                "example": false
+              }
+            }
+          }
+        }
+      }
+    },
+    "RespostaAdicionarUsuario": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "example": ""
+            },
+            "Email": {
+              "type": "string",
+              "example": ""
+            },
+            "Nome": {
+              "type": "string",
+              "example": ""
+            },
+            "Cpf": {
+              "type": "string",
+              "example": ""
+            },
+            "Senha": {
+              "type": "string",
+              "example": ""
+            },
+            "Habilitado": {
+              "type": "boolean",
+              "example": false
+            }
+          }
+        }
+      }
+    },
+    "RespostaObterUsuarioId": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "example": ""
+            },
+            "Email": {
+              "type": "string",
+              "example": ""
+            },
+            "Nome": {
+              "type": "string",
+              "example": ""
+            },
+            "Cpf": {
+              "type": "string",
+              "example": ""
+            },
+            "Senha": {
+              "type": "string",
+              "example": ""
+            },
+            "Habilitado": {
+              "type": "boolean",
+              "example": false
+            }
+          }
+        }
+      }
+    },
+    "RespostaRemoverUsuario": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "string",
+          "example": "Usuário removido com sucesso"
+        }
+      }
+    },
+    "RespostaUsuarioLogin": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "object",
+          "properties": {
+            "Id": {
+              "type": "string",
+              "example": ""
+            },
+            "Email": {
+              "type": "string",
+              "example": ""
+            },
+            "Nome": {
+              "type": "string",
+              "example": ""
+            },
+            "Cpf": {
+              "type": "string",
+              "example": ""
+            }
+          }
+        }
+      }
+    },
+    "RespostaUsuarioAtualizarSenha": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "string",
+          "example": "Senha atualizada com sucesso"
+        }
+      }
+    },
+    "RespostaHabilitarUsuario": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "string",
+          "example": "Usuário habilitado com sucesso"
+        }
+      }
+    },
+    "RespostaObterEmprestimos": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "example": ""
+              },
+              "Id_Usuario": {
+                "type": "string",
+                "example": ""
+              },
+              "Data_Solicitacao": {
+                "type": "object",
+                "properties": {}
+              },
+              "Montante": {
+                "type": "number",
+                "example": 1000
+              },
+              "Numero_Prestacoes": {
+                "type": "number",
+                "example": 10
+              },
+              "status": {
+                "type": "string",
+                "example": "Aprovado"
+              },
+              "parcelas": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": ""
+                    },
+                    "Id_Emprestimo": {
+                      "type": "string",
+                      "example": ""
+                    },
+                    "Data_Pagamento": {
+                      "type": "object",
+                      "properties": {}
+                    },
+                    "Valor": {
+                      "type": "number",
+                      "example": 1000
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "RespostaObterEmprestimo": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "example": ""
+            },
+            "Id_Usuario": {
+              "type": "string",
+              "example": ""
+            },
+            "Data_Solicitacao": {
+              "type": "object",
+              "properties": {}
+            },
+            "Montante": {
+              "type": "number",
+              "example": 1000
+            },
+            "Numero_Prestacoes": {
+              "type": "number",
+              "example": 10
+            },
+            "status": {
+              "type": "string",
+              "example": "Aprovado"
+            },
+            "parcelas": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "type": "string",
+                    "example": ""
+                  },
+                  "Id_Emprestimo": {
+                    "type": "string",
+                    "example": ""
+                  },
+                  "Data_Pagamento": {
+                    "type": "object",
+                    "properties": {}
+                  },
+                  "Valor": {
+                    "type": "number",
+                    "example": 1000
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "RespostaSolicitacaoEmprestimo": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "example": ""
+            },
+            "Id_Usuario": {
+              "type": "string",
+              "example": ""
+            },
+            "Data_Solicitacao": {
+              "type": "object",
+              "properties": {}
+            },
+            "Montante": {
+              "type": "number",
+              "example": 1000
+            },
+            "Numero_Prestacoes": {
+              "type": "number",
+              "example": 10
+            },
+            "status": {
+              "type": "string",
+              "example": "Em análise"
+            }
+          }
+        }
+      }
+    },
+    "RespostaAprovacaoEmprestimo": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "example": ""
+            },
+            "Id_Usuario": {
+              "type": "string",
+              "example": ""
+            },
+            "Data_Solicitacao": {
+              "type": "object",
+              "properties": {}
+            },
+            "Montante": {
+              "type": "number",
+              "example": 1000
+            },
+            "Numero_Prestacoes": {
+              "type": "number",
+              "example": 10
+            },
+            "status": {
+              "type": "string",
+              "example": "Aprovado"
+            },
+            "parcelas": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "type": "string",
+                    "example": ""
+                  },
+                  "Id_Emprestimo": {
+                    "type": "string",
+                    "example": ""
+                  },
+                  "Data_Pagamento": {
+                    "type": "object",
+                    "properties": {}
+                  },
+                  "Valor": {
+                    "type": "number",
+                    "example": 1000
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "RespostaObterParcelas": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "example": ""
+              },
+              "Id_Emprestimo": {
+                "type": "string",
+                "example": ""
+              },
+              "Data_Pagamento": {
+                "type": "object",
+                "properties": {}
+              },
+              "Valor": {
+                "type": "number",
+                "example": 1000
+              }
+            }
+          }
+        }
+      }
+    },
+    "RespostaObterParcela": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "example": ""
+            },
+            "Id_Emprestimo": {
+              "type": "string",
+              "example": ""
+            },
+            "Data_Pagamento": {
+              "type": "object",
+              "properties": {}
+            },
+            "Valor": {
+              "type": "number",
+              "example": 1000
+            }
+          }
+        }
+      }
+    },
+    "RespostaRegistroPagamentoParcela": {
+      "type": "object",
+      "properties": {
+        "sucesso": {
+          "type": "boolean",
+          "example": true
+        },
+        "dados": {
+          "type": "string",
+          "example": "Pagamento efetuado com sucesso"
         }
       }
     }
